--- a/index.html
+++ b/index.html
@@ -79,37 +79,37 @@
 					<div class="mini-banner"><a href="#" title="Playlists"><img src="img/puff-1.jpg" alt="Playlists" width="259" height="131" /></a></div>
 					<h3>Playlists</h3>
 					<p>With Mu-Mania, creating playlists is as easy as drag and drop. Each new playlist is saved to your account, and will be accessible from wherever you use Mu-Mania.</p>
-					<p><a class="more" href="h.html" title="Playlists">Learn more »</a></p>
+					<p><a class="more" href="h4.html" title="Playlists">Continue  »</a></p>
 				</div><!-- /#puff-1 -->
 				<div id="puff-2" class="puff">
 					<div class="mini-banner"><a href="#" title="Sharing music"><img src="img/puff-2.jpg" alt="Sharing music" width="261" height="132" /></a></div>
 					<h3>Sharing music</h3>
 					<p>To us, sharing music is one of life’s great pleasures. That’s why we’ve made it so simple for you to share tracks and play-lists with your friends. When we say ‘simple’, we mean one-click-simple.</p><!-- TO DO: word-break? -->
-					<p><a class="more" href="h.html" title="Sharing music">Learn more »</a></p>
+					<p><a class="more" href="h1.html" title="Sharing music">Continue »</a></p>
 				</div><!-- /#puff-2 -->
 				<div id="puff-3" class="puff last">
 					<div class="mini-banner"><a href="#" title="Searching for music"><img src="img/puff-3.jpg" alt="Searching for music" width="262" height="133" /></a></div>
 					<h3>Searching for music</h3>
 					<p>When you’ve got millions and millions of tracks to choose from, where do you start? With a search.</p>
-					<p><a class="more" href="h.html" title="Searching for music">Learn more »</a></p>
+					<p><a class="more" href="h2.html" title="Searching for music">Continue »</a></p>
 				</div><!-- /#puff-3 -->
 				<div id="puff-4" class="puff premium">
 					<div class="mini-banner"><a href="#" title="Mobile music"><img src="img/puff-4.jpg" alt="Mobile music" width="281" height="148" /></a></div>
 					<h3>Mobile music</h3>
 					<p>Introduce Mu-Mania to your mobile phone and you’ll have music on tap wherever you go. Play any track live over the internet, or save your playlists and listen offline, it’s your choice.</p>
-					<p><a class="more" href="h.html" title="Mobile music">Learn more »</a></p>
+					<p><a class="more" href="h3.html" title="Mobile music">Continue »</a></p>
 				</div><!-- /#puff-4 -->
 				<div id="puff-5" class="puff premium">
 					<div class="mini-banner"><a href="#" title="Offline mode"><img src="img/puff-5.jpg" alt="Offline mode" width="285" height="148" /></a></div>
 					<h3>Offline mode</h3>
 					<p>If you find yourself without an Internet connection, Mu-Mania Offline keeps the music flowing.</p>
-					<p><a class="more" href="h.html" title="Offline mode">Learn more »</a></p>
+					<p><a class="more" href="h.html" title="Offline mode">Continue »</a></p>
 				</div><!-- /#puff-5 -->
 				<div id="puff-6" class="puff last">
 					<div class="mini-banner"><a href="#" title="Your Mu-Mania Library"><img src="img/puff-6.jpg" alt="Your Mu-Mania Library" width="274" height="145" /></a></div>
 					<h3>Your Mu-Mania Library</h3>
 					<p>Now that you’ve got so much music at your disposal , you’ll need a seriously good library. So we’ve built one for you. A library that’s as clever as it is simple to use.</p>
-					<p><a class="more" href="#" title="Your Mu-Mania Library">Learn more »</a></p>
+					<p><a class="more" href="#" title="Your Mu-Mania Library">Continue »</a></p>
 				</div><!-- /#puff-6 -->
 			</div><!-- /.puffs -->
 		</div><!-- /#content -->
