--- a/h.html
+++ b/h.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>UNDER DEVELOPMENT</h1>
+    <h1 style="text-align: center;">UNDER DEVELOPMENT  </h1>
+   
 </body>
 </html>
