--- a/h.html
+++ b/h.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgb(80, 231, 80);">
     <h1 style="text-align: center;">UNDER DEVELOPMENT  </h1>
    
 </body>
