--- a/h1.html
+++ b/h1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgb(80, 231, 80);">
     <h1 style="text-align: center;">UNDER DEVELOPMENT  (Sharing music)</h1>
     <h2 style="text-align: center;">When you share music with another person, you ask them for their time. <br> You make a promise, too, that their time is going to be well spent. You're family now, <br> so they trust that you will treat their time with love and care, and then you press play.</h2>
 </body>
